@@ -12,7 +12,7 @@ AS=		va
 ASFLAGS=
 
 CC=		vc
-CFLAGS=		-wFV -I$ROOT/Plan9/mips/include -I$ROOT/include
+CFLAGS=		-wFV -I$ROOT/Plan9/$OBJTYPE/include -I$ROOT/Plan9/include -I$ROOT/include
 ANSICPP= -p
 
 LD=		vl
